namespace Player {
    public static class PlayerConstants {
        public const string Idle = "idle";
        public const string IsWalking = "isWalking";
        public const string XVelocity = "xVelocity";
        public const string YVelocity = "yVelocity";
        public const string WeaponType = "weaponType";
        public const string BaseLayer = "Base Layer";
        public const string HoeLayer = "Hoe Layer";
    }
}